--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Ten-Tec Omni 6</title>
+        <title>Restoration of a Ten-Tec Omni VI</title>
     </head>
 
     <body style="background-color:rgb(178, 232, 240);">
@@ -58,7 +58,7 @@
                 Operator's Manual can be found here (13.2 MB)</a>
             <br>
             <a href="https://ia800700.us.archive.org/1/items/The_Radio_Ham_Starring_Tony_Hancock_English_Comedy/The_Radio_Ham_Starring_Tony_Hancock_English_Comedy.mp4">
-                Video can be found here</a>         
+                Video can be found here</a> Sorry for the poor quality, requires a reasonably fast internet connection        
         </p>
         <br>
 
